--- a/frontend/src/assets/scss/pages/_home.scss
+++ b/frontend/src/assets/scss/pages/_home.scss
@@ -4,7 +4,9 @@
     
     .homepage-container {
             object-fit: contain;
-            aspect-ratio: 1.5 / 1;
+            // aspect-ratio: 1.5 / 1;
+            aspect-ratio: 1.5 / 3;
             margin: 20px 0;        
+
     }
 }
