changed to async

--- a/frontend/src/assets/scss/components/_toy-cards-list.scss
+++ b/frontend/src/assets/scss/components/_toy-cards-list.scss
@@ -9,6 +9,10 @@
         padding: unset;
         gap: rem(20px);
         font-size: 18px;
+        #action-btn {
+            padding: unset;
+        }
+
         p, h4 {
             margin: unset;
             padding: unset;
