--- a/frontend/src/assets/scss/components/_footer.scss
+++ b/frontend/src/assets/scss/components/_footer.scss
@@ -1,6 +1,6 @@
 .app-footer {
     grid-area: app-footer;
-    background: $clr6;
+    // background: $clr6;
     display: flex;
     flex-direction: column;
     align-items: center;
