--- a/frontend/src/assets/scss/main.scss
+++ b/frontend/src/assets/scss/main.scss
@@ -17,6 +17,8 @@
 @import './components/toy-edit';
 @import './components/details';
 @import './components/login_signout';
+@import './components/toy-review';
+@import './components/video-modal';
 
 // PAGES
 @import './pages/home';
