--- a/frontend/src/assets/scss/basics/_layout.scss
+++ b/frontend/src/assets/scss/basics/_layout.scss
@@ -1,46 +1,55 @@
-.main-layout {
+.with-new-header {
+    color: $txt-clr7;
+    -webkit-box-align: stretch;
+    -webkit-box-pack: start;
+    align-items: stretch;
+    box-sizing: border-box;
+    cursor: default;
+    display: flex;
+    flex-wrap: wrap;
+    font-family: Circular, Roboto, sans-serif;
+    justify-content: flex-start;
+    line-height: 20px;
+    margin-left: 0;
+    margin-right: 0;
+    max-width: none;
+    width: 100vw;
     height: 100vh;
-    width: 100%;
-    display: grid;
-    grid-template-columns: 1fr 3fr 1fr;
-    grid-template-rows: 40% 3fr 10%;
 
-    // > * {
-    //     grid-column: 3;
-    // }
+    .center-container {
+        box-sizing: border-box;
+        color: $txt-clr7;
+        cursor: default;
+        height: 100%;
+        line-height: 20px;
+        margin-left: auto;
+        margin-right: auto;
+        width: 100%;
 
-    > *.full {
-        grid-column: 1 / -1;
+        .main-content-container {
+            box-sizing: border-box;
+            color: #222;
+            column-gap: 24px;
+            cursor: default;
+            display: grid;
+            grid-auto-rows: minmax(min-content, max-content);
+            line-height: 20px;
+            margin-block-end: 32px;
+            margin-block-start: 8px;
+            row-gap: 40px;
+
+            @media (min-width: 1128px) {
+                .main-content-container {
+                  margin-block-end: 32px;
+                  margin-block-start: 8px;
+                }
+              }
+              
+              @media (min-width: 744px) {
+                .main-content-container{
+                  grid-auto-rows: minmax(0,1fr);
+                }
+              }
+        }
     }
-
-    > *:not(.full) {
-        // display: grid;
-        // grid-auto-flow: dense;
-        grid-template-columns: repeat( 3, 1fr );
-    }
-    grid-template-areas:
-    "main-header main-header main-header"
-    "main-content-container main-content-container main-content-container"
-    "app-footer app-footer app-footer";
-
-    @include for-narrow-layout {
-        @include layoutGTC($break-narrow);
-    }
-    
-    @include for-normal-layout {
-        @include layoutGTC($break-normal);
-    }
-    
-    @include for-wide-layout {
-        @include layoutGTC($break-wide);
-    }
-}
-
-
-.main-text {
-    margin-bottom: rem(90px);
-}
-
-.main-content-container {
-    grid-area: main-content-container;
 }
