--- a/frontend/src/assets/scss/components/_toy-cards-list.scss
+++ b/frontend/src/assets/scss/components/_toy-cards-list.scss
@@ -29,9 +29,9 @@
         }
 
         .toy-preview-btn {
-            border: 1px solid $clr7;
+            // border: 1px solid $clr7;
             border-radius: rem(5px);
-            color: $clr6;
+            // color: $clr6;
             cursor: pointer;
             // font-family: baloo;
             // font-size: 12px;
@@ -40,9 +40,9 @@
 }
 
 .toy-btn-add {
-    border: 1px solid $clr7;
+    // border: 1px solid $clr7;
     border-radius: rem(5px);
-    color: $clr6;
+    // color: $clr6;
     cursor: pointer;
 }
 
