new comp + top header. na-header unfinished

--- a/frontend/src/assets/scss/main.scss
+++ b/frontend/src/assets/scss/main.scss
@@ -10,7 +10,8 @@
 @import './basics/layout';
 
 // COMPONENTS
-@import './components/main-header';
+@import './components/top-header';
+@import './components/nav-header';
 @import './components/toy-cards-list';
 @import './components/footer';
 @import './components/filter';
