nav header-unfinished

--- a/frontend/src/assets/scss/setup/_typography.scss
+++ b/frontend/src/assets/scss/setup/_typography.scss
@@ -17,3 +17,8 @@
     font-family: verdana;
     src: url(../../fonts/verdana/VERDANA.TTF); 
 }
+
+@font-face {
+    font-family: alegreya;
+    src: url(../../fonts/alegreya/AlegreyaSansSC-Medium.ttf); 
+}
