--- a/frontend/src/assets/scss/components/_nav-header.scss
+++ b/frontend/src/assets/scss/components/_nav-header.scss
@@ -1,8 +1,3 @@
-body {
-  background: #eee;
-  /* This is just a helper in case the element has a transparent background or white colors. */
-}
-
 header.header-nav {
   background: $bg-clr1;
   padding-left: 80px;
@@ -10,13 +5,13 @@ header.header-nav {
   position: relative;
   width: 100%;
   line-height: 20px;
-  flex: 1 0 140px;
+  flex: 1;
 
   .main-header-nav {
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-between;
     margin-left: 80px;
     margin-right: 80px;
     padding: 0;
@@ -25,7 +20,7 @@ header.header-nav {
       padding-left: 24px;
       padding-right: 24px;
       position: relative;
-      width: 500px;
+      // width: 500px;
       margin: 0;
 
       @media (min-width: 375px) {
@@ -38,7 +33,7 @@ header.header-nav {
       @media (min-width: 744px) {
         .logo-nav {
           padding-left: 40px;
-          padding-right: 40px;
+          // padding-right: 40px;
         }
       }
 
@@ -137,9 +132,9 @@ header.header-nav {
     min-width: 348px;
     padding: 0 24px;
     text-align: center;
-    transform: scale(1, 1) translateY(0);
-    // transform-origin: 0 0;
-    // transition: transform 250ms, opacity 100ms, visibility 0ms 50ms;
+    // transform: scale(1, 1) translateY(0);
+    transform-origin: 0 0;
+    transition: transform 250ms, opacity 100ms, visibility 0ms 50ms;
     vertical-align: middle;
     visibility: visible;
     display: inline-flex;
@@ -159,6 +154,18 @@ header.header-nav {
         transform-origin: 50% 0;
       }
     }
+
+    @media (max-width: 796px) {
+      .logo-nav {
+        margin-left: 20px !important;
+        padding-right: 0;
+      }
+
+      .main-header-nav {
+        margin-right: 0;
+      }
+    }
+
 
     &:hover {
       box-shadow: 0 2px 4px rgba(0, 0, 0, .18);
@@ -264,8 +271,10 @@ header.header-nav {
         text-align: left;
         text-overflow: ellipsis;
         white-space: nowrap;
+
       }
     }
+
 
     .search-button {
       background-color: #ff385c;
@@ -304,289 +313,295 @@ header.header-nav {
       }
     }
   }
+}
 
-  .user-actions-info {
+.user-actions-info {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  // flex: 1 0 140px;
+  -webkit-box-pack: end !important;
+  -webkit-box-align: center !important;
+  position: relative !important;
+  display: flex !important;
+  align-items: center !important;
+  justify-content: flex-end !important;
+  height: 80px !important;
+
+  .sale-offers {
+    -webkit-box-pack: end !important;
+    display: flex !important;
+    flex: auto !important;
+    justify-content: flex-end !important;
+    margin-right: 8px !important;
+
+    & button {
+      appearance: none;
+      background-color: transparent;
+      border-width: 0;
+      cursor: pointer;
+      font-size: 14px;
+      font-weight: 600;
+      line-height: 18px;
+      margin: 0;
+      outline: none;
+      overflow: visible;
+      padding: 12px;
+      position: relative;
+      text-align: start;
+      transition: color 250ms;
+      user-select: auto;
+      white-space: nowrap;
+
+      &:hover:before {
+        background: #f7f7f7;
+      }
+
+      &:before {
+        border-radius: 22px;
+        bottom: 0;
+        content: "";
+        left: -3px;
+        position: absolute;
+        right: -3px;
+        top: 0;
+        z-index: 0;
+      }
+
+      &:focus-visible {
+        z-index: 2;
+      }
+
+      &:focus-visible:before {
+        transition: box-shadow .2s;
+      }
+
+      &:focus[data-focus-visible-added] {
+        z-index: 2;
+      }
+
+      &:focus[data-focus-visible-added]:before {
+        transition: box-shadow .2s;
+      }
+    }
+
+    @media (prefers-reduced-motion: reduce) {
+      .sale-offers[class][class]:focus-visible::before {
+        transition: none 0s;
+      }
+    }
+
+    @media (prefers-reduced-motion: reduce) {
+      .sale-offers[class][class]:focus[data-focus-visible-added]::before {
+        transition: none 0s;
+      }
+    }
+
+    .promo-btn span {
+      -webkit-box-align: center;
+      align-items: center;
+      box-sizing: border-box;
+      color: #222;
+      cursor: pointer;
+      display: flex;
+      font-family: roboto;
+      font-size: 14px;
+      font-weight: 400;
+      height: 100%;
+      line-height: 18px;
+      position: relative;
+      white-space: nowrap;
+      z-index: 1;
+    }
+  }
+
+  .lan-switch-container {
+    position: relative !important;
+    display: inline !important;
+
+    & button {
+      background: transparent;
+      border: 0;
+      cursor: pointer;
+      margin: 0;
+      padding: 0;
+      text-align: inherit;
+      padding: 12px;
+
+      &:hover:before {
+        background: #f7f7f7;
+        z-index: -5;
+      }
+
+      &:before {
+        content: "";
+        border-radius: 22px;
+        bottom: 0;
+        left: -3px;
+        position: absolute;
+        right: -3px;
+        top: 0;
+        z-index: 0;
+      }
+
+      &:focus-visible {
+        z-index: 2;
+      }
+
+      &:focus-visible:before {
+        transition: box-shadow .2s;
+      }
+
+      &:focus[data-focus-visible-added] {
+        z-index: 2;
+      }
+
+      &:focus[data-focus-visible-added]:before {
+        transition: box-shadow .2s;
+      }
+    }
+
+    @media (prefers-reduced-motion: reduce) {
+      .lan-switch-container[class][class]:focus-visible::before {
+        transition: none 0s;
+      }
+    }
+
+    @media (prefers-reduced-motion: reduce) {
+      .lan-switch-container[class][class]:focus[data-focus-visible-added]::before {
+        transition: none 0s;
+      }
+    }
+
+    .lang-switch {
+      -webkit-box-align: center;
+      align-items: center;
+      box-sizing: border-box;
+      color: #222;
+      cursor: pointer;
+      display: flex;
+      font-size: 14px;
+      font-weight: 600;
+      height: 100%;
+      line-height: 18px;
+      position: relative;
+      white-space: nowrap;
+      z-index: 1;
+    }
+
+    button.lang-switch svg {
+      box-sizing: border-box;
+      display: block;
+      fill: currentcolor;
+      height: 20px;
+      width: 20px;
+
+      & path {
+        box-sizing: border-box;
+      }
+    }
+  }
+
+  .user-actions-login-out {
+    box-sizing: border-box;
+    color: #222;
     display: flex;
     flex-direction: row;
     align-items: center;
-    // flex: 1 0 140px;
-    -webkit-box-pack: end !important;
-    -webkit-box-align: center !important;
-    position: relative !important;
-    display: flex !important;
-    align-items: center !important;
-    justify-content: flex-end !important;
-    height: 80px !important;
+    justify-content: center;
+    font-family: roboto;
+    line-height: 20px;
+    position: relative;
+    width: 18em;
+    gap: 0.5em;
+    float: right;
 
-    .sale-offers {
-      -webkit-box-pack: end !important;
-      display: flex !important;
-      flex: auto !important;
-      justify-content: flex-end !important;
-      margin-right: 8px !important;
+    & button.user-btn {
+      -webkit-box-align: center;
+      align-items: center !important;
+      appearance: none;
+      background-color: #fff;
+      border: 1px solid #ddd;
+      border-image: none 100% 1 0 stretch;
+      border-radius: 50% !important;
+      box-sizing: border-box;
+      color: #222;
+      cursor: pointer;
+      width: 42px;
+      aspect-ratio: 1/1 !important;
+      display: flex;
+      flex-direction: column;
+      justify-content: center !important;
+      font-family: inherit;
+      font-size: inherit;
+      font-weight: inherit;
+      height: 42px;
+      line-height: inherit;
+      margin: 0;
+      outline: none;
+      overflow: visible;
+      padding: 5px;
+      margin: auto 0;
+      position: relative;
+      text-align: inherit;
+      text-decoration: none;
+      transition: box-shadow .2s;
+      user-select: auto;
+      vertical-align: middle;
+      z-index: 1;
 
-      & button {
-        appearance: none;
-        background-color: transparent;
-        border-width: 0;
-        cursor: pointer;
-        font-size: 14px;
-        font-weight: 600;
-        line-height: 18px;
-        margin: 0;
-        outline: none;
-        overflow: visible;
-        padding: 12px;
-        position: relative;
-        text-align: start;
-        transition: color 250ms;
-        user-select: auto;
-        white-space: nowrap;
+      &:focus-visible {
+        transition-delay: 0s;
+        transition-duration: .2s;
+        transition-timing-function: ease;
+      }
 
-        &:hover:before {
-          background: #f7f7f7;
-        }
+      &:focus[data-focus-visible-added] {
+        transition-delay: 0s;
+        transition-duration: .2s;
+        transition-timing-function: ease;
+      }
 
-        &:before {
-          border-radius: 22px;
-          bottom: 0;
-          content: "";
-          left: -3px;
-          position: absolute;
-          right: -3px;
-          top: 0;
-          z-index: 0;
+      &:hover {
+        box-shadow: 0 2px 4px rgba(0, 0, 0, .18);
+      }
+
+      @media (prefers-reduced-motion: reduce) {
+        button.user-btn {
+          transition: none 0s;
         }
 
         &:focus-visible {
-          z-index: 2;
-        }
-
-        &:focus-visible:before {
-          transition: box-shadow .2s;
+          transition: none 0s;
         }
 
         &:focus[data-focus-visible-added] {
-          z-index: 2;
-        }
-
-        &:focus[data-focus-visible-added]:before {
-          transition: box-shadow .2s;
-        }
-      }
-
-      @media (prefers-reduced-motion: reduce) {
-        .sale-offers[class][class]:focus-visible::before {
           transition: none 0s;
-        }
-      }
-
-      @media (prefers-reduced-motion: reduce) {
-        .sale-offers[class][class]:focus[data-focus-visible-added]::before {
-          transition: none 0s;
-        }
-      }
-
-      .promo-btn span {
-        -webkit-box-align: center;
-        align-items: center;
-        box-sizing: border-box;
-        color: #222;
-        cursor: pointer;
-        display: flex;
-        font-family: roboto;
-        font-size: 14px;
-        font-weight: 400;
-        height: 100%;
-        line-height: 18px;
-        position: relative;
-        white-space: nowrap;
-        z-index: 1;
-      }
-    }
-
-    .lan-switch-container {
-      position: relative !important;
-      display: inline !important;
-
-      & button {
-        background: transparent;
-        border: 0;
-        cursor: pointer;
-        margin: 0;
-        padding: 0;
-        text-align: inherit;
-        padding: 12px;
-
-        &:hover:before {
-          background: #f7f7f7;
-          z-index: -5;
-        }
-
-        &:before {
-          content: "";
-          border-radius: 22px;
-          bottom: 0;
-          left: -3px;
-          position: absolute;
-          right: -3px;
-          top: 0;
-          z-index: 0;
-        }
-
-        &:focus-visible {
-          z-index: 2;
-        }
-
-        &:focus-visible:before {
-          transition: box-shadow .2s;
-        }
-
-        &:focus[data-focus-visible-added] {
-          z-index: 2;
-        }
-
-        &:focus[data-focus-visible-added]:before {
-          transition: box-shadow .2s;
-        }
-      }
-
-      @media (prefers-reduced-motion: reduce) {
-        .lan-switch-container[class][class]:focus-visible::before {
-          transition: none 0s;
-        }
-      }
-
-      @media (prefers-reduced-motion: reduce) {
-        .lan-switch-container[class][class]:focus[data-focus-visible-added]::before {
-          transition: none 0s;
-        }
-      }
-
-      .lang-switch {
-        -webkit-box-align: center;
-        align-items: center;
-        box-sizing: border-box;
-        color: #222;
-        cursor: pointer;
-        display: flex;
-        font-size: 14px;
-        font-weight: 600;
-        height: 100%;
-        line-height: 18px;
-        position: relative;
-        white-space: nowrap;
-        z-index: 1;
-      }
-
-      button.lang-switch svg {
-        box-sizing: border-box;
-        display: block;
-        fill: currentcolor;
-        height: 20px;
-        width: 20px;
-
-        & path {
-          box-sizing: border-box;
         }
       }
     }
 
-      .user-actions-login-out {
-        box-sizing: border-box;
-        color: #222;
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        justify-content: center;
-        font-family: roboto;
-        line-height: 20px;
-        position: relative;
-        width: 10em;
-        gap: 0.5em;
-        // margin-left:1em;
-    
-      & button.user-btn {
-        -webkit-box-align: center;
-        align-items: center !important;
-        appearance: none;
-        background-color: #fff;
-        border: 1px solid #ddd;
-        border-image: none 100% 1 0 stretch;
-        border-radius: 50% !important;
-        box-sizing: border-box;
-        color: #222;
-        cursor: pointer;
-        width: 42px;
-        aspect-ratio: 1/1 !important;
-        display: flex;
-        flex-direction: column;
-        justify-content:center !important;
-        font-family: inherit;
-        font-size: inherit;
-        font-weight: inherit;
-        height: 42px;
-        line-height: inherit;
-        margin: 0;
-        outline: none;
-        overflow: visible;
-        padding: 5px;
-        margin: auto 0;
-        position: relative;
-        text-align: inherit;
-        text-decoration: none;
-        transition: box-shadow .2s;
-        user-select: auto;
-        vertical-align: middle;
-        z-index: 1;
-        
-        &:focus-visible {
-          transition-delay: 0s;
-          transition-duration: .2s;
-          transition-timing-function: ease;
-        }
-        
-        &:focus[data-focus-visible-added] {
-          transition-delay: 0s;
-          transition-duration: .2s;
-          transition-timing-function: ease;
-        }
-        
-        &:hover {
-          box-shadow: 0 2px 4px rgba(0,0,0,.18);
-        }
-        
-        @media (prefers-reduced-motion: reduce) {
-          button.user-btn {
-            transition: none 0s;
-          }
-          
-          &:focus-visible {
-            transition: none 0s;
-          }
-          
-          &:focus[data-focus-visible-added] {
-            transition: none 0s;
-          }
-        }
-      }
-      
-      .user-dot {
-        background-color: #ff385c;
-        border-radius: 50%;
-        box-shadow: 0 0 0 1.5px #fff;
-        box-sizing: border-box;
-        color: #222;
-        cursor: pointer;
-        font-family: Circular,-apple-system,BlinkMacSystemFont,Roboto,"Helvetica Neue",sans-serif;
-        height: 10px;
-        line-height: 20px;
-        min-width: 10px;
-        position: absolute;
-        right: 4px;
-        top: 2px;
-        z-index: 6;
-      }
+    .user-dot {
+      background-color: #ff385c;
+      border-radius: 50%;
+      box-shadow: 0 0 0 1.5px #fff;
+      box-sizing: border-box;
+      color: #222;
+      cursor: pointer;
+      font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto, "Helvetica Neue", sans-serif;
+      height: 10px;
+      line-height: 20px;
+      min-width: 10px;
+      position: absolute;
+      right: 4px;
+      top: 2px;
+      z-index: 6;
+    }
+
+    .logout-btn-container {
+      display: flex;
+      flex-direction: row;
+      gap: 1em;
     }
   }
 }
