--- a/frontend/src/assets/scss/components/_top-header.scss
+++ b/frontend/src/assets/scss/components/_top-header.scss
@@ -13,10 +13,7 @@
     z-index: 11;
 
     .title-header-items {
-        -webkit-box-align: center;
-        -webkit-box-pack: center;
         align-items: center;
-        box-sizing: border-box;
         display: flex;
         flex-direction: row;
         font-weight: 800;
@@ -29,22 +26,19 @@
 
 
         .company-info-container {
-            -webkit-box-align: center;
             align-items: center;
-            box-sizing: border-box;
             display: flex;
             flex-direction: row;
             font-weight: 800;
             height: 100%;
             line-height: 22px;
             position: absolute;
-            right: 64px;
+            right: 8em;
             top: 0;
 
             .play-video {
                 padding-left: 16px;
                 padding-right: 16px;
-                -webkit-box-align: center;
                 align-items: center;
                 appearance: button;
                 background-color: #f7f7f7;
@@ -94,8 +88,12 @@
                 border-radius: 4px;
                 box-sizing: border-box;
                 cursor: pointer;
-                margin-left: -8px;
-                margin-right: 16px;
+                // margin-left: -8px;
+                // margin-right: 16px;
+            }
+            
+            .video-cap {
+                width: 10.2em;
             }
 
             .learn-more-container {
@@ -146,183 +144,3 @@
         }
     }
 }
-
-
-
-// img {
-//     // opacity: 0.5;
-//     width: 100%;
-//     object-fit: cover;
-//     position: absolute;
-//     inset: 0;
-//     z-index: -1;
-//     max-height: 40%;
-// }
-
-// .main-header-nav {
-//     display: flex;
-//     flex-direction: row;
-//     position: relative;
-//     z-index: 10;
-//     width: 100%;
-//     background-color: $clr7;
-
-//     .main-nav {
-//         display: flex;
-//         flex-direction: row;
-
-//         li {
-//             border-right: 1px solid black;
-
-//             a {
-//                 @include btn($type: light, $padding: em(10px));
-
-//                 &.active {
-//                     color: $clr1;
-//                 }
-//             }
-//         }
-//     }
-
-//     .sale-offers {
-//         align-self: center;
-//         margin: 0 auto;
-//         font-size: 1.2em;
-//         text-transform: uppercase;
-//         color: $clr2;
-
-//         span {
-//             margin-left: 1em;
-//             color: $clr8;
-//         }
-
-//     }
-
-//     .lan-search-container {
-//         display: flex;
-//         flex-direction: row;
-//         float: right;
-//         margin: 0 0 0 auto;
-//         display: none;
-
-//         .lang-switch {
-//             width: 2.5em;
-//             padding: 0;
-//             text-align: center;
-//             align-items: center;
-//             @include btn($type: dark, $padding: em(10px));
-//         }
-
-//         .main-header-search {
-//             border: none;
-//             display: inline-flex;
-//             align-items: center;
-//             justify-content: center;
-//             background-color: $clr1;
-//             overflow: hidden;
-//             font-size: 1.8em;
-//             width: 2em;
-
-//             input.input-search {
-//                 background-color: $clr7;
-//                 border: none;
-//                 outline: none;
-//             }
-//         }
-
-//         svg {
-//             width: 1em;
-//             padding: 0.1em;
-//             cursor: pointer;
-//         }
-//     }
-// }
-
-// .header-title {
-//     display: flex;
-//     flex-direction: column;
-//     align-items: center;
-//     justify-content: center;
-//     width: 100%;
-//     flex-grow: 1;
-
-//     svg {
-//         // margin-top: 0.5em;
-//         filter: drop-shadow(0px 0px 3px $clr8);
-//     }
-
-//     p {
-//         font-size: 5em;
-//         -webkit-text-stroke: 1px $clr2;
-//         -webkit-text-fill-color: $clr6;
-//         line-height: 0.5em;
-//         text-align: center;
-//         margin: unset;
-//         padding: unset;
-//         margin-top: 0.1em;
-
-//         span {
-//             font-size: 0.6em;
-//             -webkit-text-stroke: 1px $clr1;
-//             -webkit-text-fill-color: $clr2;
-//         }
-//     }
-// }
-
-// .user-greet {
-//     color: white;
-//     font-size: 1em;
-
-//     &span {
-//         color: pink;
-//         font-size: 1em;
-//     }
-// }
-
-// .login-page {
-//     display: flex;
-//     flex-direction: row;
-//     margin-top: 0;
-//     visibility: hidden;
-// }
-
-// .signup-page {
-//     display: flex;
-//     flex-direction: row;
-//     margin-top: 0;
-//     // display: none;
-// }
-
-// .signup-container {
-//     display: flex;
-//     flex-direction: row;
-//     margin-top: 0;
-//     display: none;
-// }
-// }
-
-
-// .user-msg {
-//     color: white;
-//     padding: 10px;
-//     font-size: 1.4em;
-//     position: fixed;
-//     top: 40%;
-//     right: 0;
-//     background-color: grey;
-// }
-
-// .user-msg button {
-//     float: right;
-//     border: 0;
-//     border-radius: 50%;
-//     margin: 5px;
-// }
-
-// .success {
-//     background-color: rgb(181, 237, 193);
-// }
-
-// .danger {
-//     background-color: rgb(228, 146, 146);
-// }
