paging btn and going to sleep

--- a/frontend/src/assets/scss/components/_toy-cards-list.scss
+++ b/frontend/src/assets/scss/components/_toy-cards-list.scss
@@ -39,12 +39,12 @@
     }
 }
 
-.toy-btn-add {
-    // border: 1px solid $clr7;
-    border-radius: rem(5px);
-    // color: $clr6;
-    cursor: pointer;
-}
+// .toy-btn-add {
+//     // border: 1px solid $clr7;
+//     border-radius: rem(5px);
+//     // color: $clr6;
+//     cursor: pointer;
+// }
 
 
 .tooltip {
