--- a/frontend/src/assets/scss/components/_filter.scss
+++ b/frontend/src/assets/scss/components/_filter.scss
@@ -114,21 +114,37 @@
     .pagings {
         display: flex;
         flex-direction: column;
+        align-items: center;
+        justify-content: space-evenly;
     }
 
-    .pagings>* button {
-        gap: 1em;
-        margin: 0.5em;
+    .pagings-up-down {
+        display: flex;
+        flex-direction: row;
+        gap: 0.3em;
 
         &.btn-page {
             border-radius: 20%;
             background-color: transparent;
+            background: none;
+            appearance: none;
             outline: none;
             border: none;
             font-size: 20px;
             font-family: alegreya;
             font-weight: 600;
+            margin: 0;
+            padding: 0;
 
         }
     }
+}
+
+.filter-container.toy-btn-add {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 0;
+    padding: 0;
 }
