fix bug with curser

--- a/frontend/src/assets/scss/basics/_layout.scss
+++ b/frontend/src/assets/scss/basics/_layout.scss
@@ -18,13 +18,9 @@
 
     .center-container {
         box-sizing: border-box;
-        color: $txt-clr7;
-        cursor: default;
-<<<<<<< HEAD
-        // height: 100%;
-=======
+        color: $txt-clr7;        
+        // cursor: default;
         height: 10%;
->>>>>>> 7f099f0a23b6b5a47620dff88da06a723a395166
         line-height: 20px;
         margin-left: auto;
         margin-right: auto;
