--- a/frontend/src/assets/scss/components/_filter.scss
+++ b/frontend/src/assets/scss/components/_filter.scss
@@ -50,6 +50,7 @@
     // align-items: center;
     justify-content: center;
     vertical-align: middle;
+    margin-top: 12%;
 
     &:nth-child(n) {
         grid-column-end: 2;
