--- a/frontend/src/assets/scss/main.scss
+++ b/frontend/src/assets/scss/main.scss
@@ -21,7 +21,10 @@
 @import './components/toy-review';
 @import './components/video-modal';
 
+//cmps
+@import './cmps/toy-filter';
 // PAGES
 @import './pages/home';
+@import './pages/app';
 @import './pages/about';
 
