general layout ok

--- a/frontend/src/assets/scss/components/_cards.scss
+++ b/frontend/src/assets/scss/components/_cards.scss
@@ -1,8 +1,8 @@
 
-.toy-app {
-	display: flex;
-	flex-direction: column;
-}
+// .toy-app {
+// 	display: flex;
+// 	flex-direction: column;
+// }
 
 
 .toy-preview {
