--- a/frontend/src/assets/scss/components/_nav-header.scss
+++ b/frontend/src/assets/scss/components/_nav-header.scss
@@ -8,6 +8,7 @@ header.header-nav {
   flex: 1;
   border: 0;
   border-bottom: 1px dashed #ccc;
+  height: 78px;
 
   .main-header-nav {
     display: flex;
