--- a/frontend/src/assets/scss/pages/_app.scss
+++ b/frontend/src/assets/scss/pages/_app.scss
@@ -1,24 +1,33 @@
 .app-container {
+    height: 100vh;
   display: grid;
-  grid-template-rows: 500px 1rf 2fr auto 1fr;
-  gap: 20px;
+  grid-template-rows: 78px 78px 78px auto 78px;
+
+  grid-template-areas: "title-header"
+  "header-nav" 
+  "toy-filter-container"
+  "toy-list"
+  "app-footer";
+
+  grid-template-columns: 100%;
+//   gap: 20px;
     .title-header {
-        grid-row: 1/2;
+        grid-row: 1;
     }
 
-    header.header-nav {
-        grid-row: 2/3;
+    .header-nav {
+        grid-row: 2;
     }
 
     .toy-filter-container {
-        grid-row: 3/4;
+        grid-row: 3;
     }
 
     .toy-list {
-        grid-row: 4/5
+        grid-row: 4
     }
 
     .app-footer {
-        grid-row: 5/6;
+        grid-row: 5;
     }
 }
