filter and desgin

--- a/frontend/src/assets/scss/components/_fromairbnb.scss
+++ b/frontend/src/assets/scss/components/_fromairbnb.scss
@@ -2,25 +2,25 @@
   <div class="plmw1e5 mq5rv0q dir dir-ltr">
     <div data-plugin-in-point-id="PAGINATED_HOMES-ExploreSectionWrapper:TAB_8528:PAGINATED_SECTION" data-section-id="PAGINATED_HOMES-ExploreSectionWrapper:TAB_8528:PAGINATED_SECTION">
       <div data-test-class="ExploreSectionWrapper" class="_11ry7lz">
-        <div class="a1stauiv dir dir-ltr" data-testid="explore-section-dismiss-animation-wrapper">
+        <div className="a1stauiv dir dir-ltr" data-testid="explore-section-dismiss-animation-wrapper">
           <div></div>
           <div class="c1yo0219 dir dir-ltr">
             <div data-plugin-in-point-id="PAGINATED_HOMES:TAB_8528:PAGINATED_SECTION" data-section-id="PAGINATED_HOMES:TAB_8528:PAGINATED_SECTION" style="display:contents" data-reactroot="">
-              <div class=" dir dir-ltr">
-                <div class="gh7uyir g14v8520 dir dir-ltr">
-                  <div class="c4mnd7m dir dir-ltr">
-                    <div class="c1pbo4kt cikyho8 dir dir-ltr" style="--transition-element_transition-delay:0ms;--transition-element_transition-duration:200ms">
+              <div className=" dir dir-ltr">
+                <div className="gh7uyir g14v8520 dir dir-ltr">
+                  <div className="c4mnd7m dir dir-ltr">
+                    <div className="c1pbo4kt cikyho8 dir dir-ltr" style="--transition-element_transition-delay:0ms;--transition-element_transition-duration:200ms">
                       <div>
-                        <div class="m1cp3yuo dir dir-ltr">
-                          <div class=" dir dir-ltr">
-                            <div class="awuxh4x dir dir-ltr">
-                              <div class="cw9aemg dir dir-ltr"><span aria-busy="true" style="display:block;height:100%;width:100%;background-color:white;border-radius:var(--i-g-gvoq)"><span class="_8kplbn" style="animation-play-state:running;height:100%;width:100%;border-radius:var(--i-g-gvoq)"></span></span></div>
+                        <div className="m1cp3yuo dir dir-ltr">
+                          <div className=" dir dir-ltr">
+                            <div className="awuxh4x dir dir-ltr">
+                              <div className="cw9aemg dir dir-ltr"><span aria-busy="true" style="display:block;height:100%;width:100%;background-color:white;border-radius:var(--i-g-gvoq)"><span className="_8kplbn" style="animation-play-state:running;height:100%;width:100%;border-radius:var(--i-g-gvoq)"></span></span></div>
                             </div>
                           </div>
                         </div>
-                        <div class="g1wiliwt cb4nyux dir dir-ltr"><span aria-busy="true" style="display:block;height:19px;width:65%;background-color:white;border-radius:4px"><span class="_8kplbn" style="animation-play-state:running;height:100%;width:100%;border-radius:4px"></span></span>
-                          <div class="a3g92ry dir dir-ltr"><span aria-busy="true" style="display:block;height:19px;width:100%;background-color:white;border-radius:4px"><span class="_8kplbn" style="animation-play-state:running;height:100%;width:100%;border-radius:4px"></span></span></div>
-                          <div class="f15liw5s dir dir-ltr"><span aria-busy="true" style="display:block;height:19px;width:39%;background-color:white;border-radius:4px"><span class="_8kplbn" style="animation-play-state:running;height:100%;width:100%;border-radius:4px"></span></span></div>
+                        <div className="g1wiliwt cb4nyux dir dir-ltr"><span aria-busy="true" style="display:block;height:19px;width:65%;background-color:white;border-radius:4px"><span className="_8kplbn" style="animation-play-state:running;height:100%;width:100%;border-radius:4px"></span></span>
+                          <div className="a3g92ry dir dir-ltr"><span aria-busy="true" style="display:block;height:19px;width:100%;background-color:white;border-radius:4px"><span className="_8kplbn" style="animation-play-state:running;height:100%;width:100%;border-radius:4px"></span></span></div>
+                          <div className="f15liw5s dir dir-ltr"><span aria-busy="true" style="display:block;height:19px;width:39%;background-color:white;border-radius:4px"><span className="_8kplbn" style="animation-play-state:running;height:100%;width:100%;border-radius:4px"></span></span></div>
                           <div class="f15liw5s dir dir-ltr"><span aria-busy="true" style="display:block;height:19px;width:28%;background-color:white;border-radius:4px"><span class="_8kplbn" style="animation-play-state:running;height:100%;width:100%;border-radius:4px"></span></span></div>
                           <div class="pc0djro dir dir-ltr"><span aria-busy="true" style="display:block;height:19px;width:26%;background-color:white;border-radius:4px"><span class="_8kplbn" style="animation-play-state:running;height:100%;width:100%;border-radius:4px"></span></span></div>
                         </div>
