--- a/frontend/src/assets/scss/components/_filter.scss
+++ b/frontend/src/assets/scss/components/_filter.scss
@@ -1,26 +1,43 @@
 .toy-app-container {
-    padding: block-start;
+    // padding: block-start;
     position: sticky;
     width: 100%;
     height: 98px;
     background-color: $bg-clr1;
+    
 }
 
 .toy-filter-container {
     background-color: $bg-clr1;
     display: grid;
     font-family: circular;
-    grid-template-columns: 100%;
+    justify-content: start;
+    margin-left: rem(100px);
+    // gap: rem(20px);
+    // grid-template-columns: 100%;
     line-height: 20px;
-    margin-inline-end: auto;
-    margin-inline-start: auto;
+    // margin-inline-end: auto;
+    // margin-inline-start: auto;
     max-height: 78px;
     // max-width: 1760px;
-    padding-inline-end: 80px;
-    padding-inline-start: 80px;
+    // padding-inline-end: 80px;
+    // padding-inline-start: 80px;
     // grid-template-columns: repeat(6, 1fr); 
-    grid-template-rows: 1fr;
+    grid-template-rows: 1fr 1fr;
     margin-top: 20px;
+
+    .labels-container {
+        grid-row: 1/2;
+        width: rem(1000px);
+    }
+
+    .action-btn-container {
+        grid-row: 2/3;
+        width: rem(1000px);
+        display: flex;
+        flex-direction: row;
+        gap: rem(20px);
+    }
 }
 
 .toy-fields-container {
@@ -37,7 +54,8 @@
 }
 
 .toy-label-filter {
-    display: grid;
+    // display: grid;
+    // grid-template-rows: 1fr 1fr;
     max-height: 78px;
     position: relative;
     line-height: 20px;
@@ -45,13 +63,13 @@
     grid-auto-flow: column;
     justify-content: space-evenly;
     margin: 0;
-    width: 90%;
+    width: rem(1000px);
     // overflow-x: auto;
     // overflow-y: hidden;
     row-gap: 32px;
     // align-items: center;
     justify-content: center;
-    vertical-align: middle;
+    // vertical-align: middle;
 
     &:nth-child(n) {
         grid-column-end: 2;
@@ -59,6 +77,8 @@
         grid-row-end: 2;
         grid-row-start: 1;
     }
+
+   
 }
 
 .filter-box {
@@ -106,7 +126,7 @@
     }
 
     input.search-filter {
-        background-color: yellow;
+        background-color: rgb(247, 247, 244);
         border-radius: 4px;
         height: 16px;
         margin: 0;
